# sigstore-rust

./: .gitattributes  Cargo.toml  LICENSE  release-plz.toml
.github/workflows/: ci.yml  interop.yml  release-plz.yml
crates/sigstore/: Cargo.toml
crates/sigstore-bundle/: CHANGELOG.md  Cargo.toml  README.md
crates/sigstore-bundle/src/: builder.rs  error.rs  lib.rs  validation.rs
crates/sigstore-bundle/tests/: bundle_v3_tests.rs  bundle_versions_tests.rs
crates/sigstore-cache/: Cargo.toml  README.md
crates/sigstore-cache/src/: error.rs  filesystem.rs  lib.rs  memory.rs  noop.rs
crates/sigstore-conformance/: Cargo.toml
crates/sigstore-conformance/src/: main.rs
crates/sigstore-crypto/: CHANGELOG.md  Cargo.toml  README.md
crates/sigstore-crypto/src/: checkpoint.rs  encoding.rs  error.rs  hash.rs  keyring.rs  lib.rs  signing.rs  verification.rs  x509.rs
crates/sigstore-fulcio/: CHANGELOG.md  Cargo.toml  README.md
crates/sigstore-fulcio/src/: client.rs  error.rs  lib.rs
crates/sigstore-merkle/: Cargo.toml  README.md
crates/sigstore-merkle/src/: error.rs  lib.rs  proof.rs  tree.rs
crates/sigstore-merkle/test-data/: update.sh
crates/sigstore-merkle/tests/: rfc6962_tests.rs
crates/sigstore-oidc/: CHANGELOG.md  Cargo.toml  README.md
crates/sigstore-oidc/src/: ambient.rs  error.rs  lib.rs  oauth.rs  token.rs
crates/sigstore-rekor/: CHANGELOG.md  Cargo.toml  README.md
crates/sigstore-rekor/src/: body.rs  client.rs  entry.rs  error.rs  lib.rs
crates/sigstore-sign/: CHANGELOG.md  README.md
crates/sigstore-sign/examples/: sign_attestation.rs
crates/sigstore-sign/src/: sign.rs
crates/sigstore-trust-root/: CHANGELOG.md  Cargo.toml  README.md
crates/sigstore-trust-root/src/: error.rs  lib.rs  trusted_root.rs  tuf.rs
crates/sigstore-trust-root/tests/: parsing.rs
crates/sigstore-tsa/: CHANGELOG.md  Cargo.toml  README.md
crates/sigstore-tsa/src/: asn1.rs  client.rs  error.rs  lib.rs  parse.rs  verify.rs
crates/sigstore-types/: CHANGELOG.md  Cargo.toml  README.md
crates/sigstore-types/src/: bundle.rs  checkpoint.rs  dsse.rs  encoding.rs  error.rs  hash.rs  intoto.rs  lib.rs
crates/sigstore-verify/: CHANGELOG.md  Cargo.toml  README.md
crates/sigstore-verify/examples/: verify_bundle.rs  verify_conda_attestation.rs
crates/sigstore-verify/src/: verify.rs
crates/sigstore-verify/src/verify_impl/: hashedrekord.rs  helpers.rs  rekor.rs  sct.rs  tlog.rs
crates/sigstore-verify/test_data/bundles/: cosign-v3-blob.sigstore.json  cosign-v3-blob.txt
crates/sigstore-verify/tests/: verification_tests.rs
crates/sigstore/examples/: attest_blob.rs  conformance.rs  sign_blob.rs  verify_bundle.rs
crates/sigstore/src/: error.rs  lib.rs  sign.rs  verify.rs
crates/sigstore/src/verify_impl/: hashedrekord.rs  helpers.rs  rekor.rs  sct.rs  tlog.rs
crates/sigstore/tests/: verification_tests.rs
scripts/: compare_bundles.py
tests/: mutation_fuzzer.py
