[package]
name = "sigstore-conformance"
description = "Sigstore conformance test client (not published)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "conformance"
path = "src/main.rs"

[dependencies]
sigstore-sign = { path = "../sigstore-sign" }
sigstore-verify = { path = "../sigstore-verify" }
sigstore-types = { path = "../sigstore-types" }
sigstore-crypto = { path = "../sigstore-crypto" }
sigstore-fulcio = { path = "../sigstore-fulcio" }
sigstore-oidc = { path = "../sigstore-oidc" }
sigstore-rekor = { path = "../sigstore-rekor" }
sigstore-tsa = { path = "../sigstore-tsa" }
sigstore-trust-root = { path = "../sigstore-trust-root" }
sigstore-bundle = { path = "../sigstore-bundle" }
tokio = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
x509-cert = { workspace = true }
