[package]
name = "sigstore-merkle"
description = "RFC 6962 Merkle tree verification for Sigstore"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sigstore-types = { path = "../sigstore-types" }
sha2 = { workspace = true }
digest = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
