[package]
name = "sigstore-oidc"
description = "OpenID Connect identity provider for Sigstore"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sigstore-types = { path = "../sigstore-types" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
url = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = "0.8"

[dev-dependencies]
