[package]
name = "sigstore-trust-root"
description = "Sigstore trusted root management and parsing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
tuf = ["tough", "tokio", "futures", "directories", "url", "tracing"]

[dependencies]
# Internal dependencies
sigstore-types = { path = "../sigstore-types" }
sigstore-crypto = { path = "../sigstore-crypto" }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto & Certificates
base64 = { workspace = true }
x509-cert = { workspace = true }
rustls-pki-types = "1.0"

# Time handling
chrono = { workspace = true }

# Utilities
hex = { workspace = true }

# TUF feature dependencies (optional)
tough = { version = "0.21", features = ["http"], optional = true }
tokio = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }
directories = { version = "5.0", optional = true }
url = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
# For testing
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
