[package]
name = "sigstore-tsa"
description = "RFC 3161 Time-Stamp Protocol client for Sigstore"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sigstore-types = { path = "../sigstore-types" }
sigstore-crypto = { path = "../sigstore-crypto" }
aws-lc-rs = { workspace = true }
der = { workspace = true }
const-oid = { workspace = true, features = ["db"] }
reqwest = { workspace = true, features = ["rustls-tls"] }
thiserror = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

# RFC 3161 timestamp verification
cms = { workspace = true, default-features = false }
x509-cert = { workspace = true }
x509-tsp = { workspace = true, default-features = false }
cmpv2 = { workspace = true, default-features = false }
rustls-webpki = { workspace = true, default-features = false, features = ["alloc", "std"] }
rustls-pki-types = { workspace = true, default-features = false }
chrono = { workspace = true, features = ["std"] }
tracing = { workspace = true}
hex = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
