[package]
name = "sigstore-verify"
description = "Sigstore signature verification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sigstore-types = { path = "../sigstore-types" }
sigstore-crypto = { path = "../sigstore-crypto" }
sigstore-merkle = { path = "../sigstore-merkle" }
sigstore-trust-root = { path = "../sigstore-trust-root" }
sigstore-bundle = { path = "../sigstore-bundle" }
sigstore-rekor = { path = "../sigstore-rekor" }
sigstore-tsa = { path = "../sigstore-tsa" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
x509-cert = { workspace = true }
hex = { workspace = true }
cms = { workspace = true }
const-oid = { workspace = true }
tls_codec = { workspace = true }
rustls-webpki = { workspace = true }
rustls-pki-types = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
const-oid = { workspace = true }
x509-cert = { workspace = true }
sigstore-types = { path = "../sigstore-types" }

[features]
default = []
tuf = ["sigstore-trust-root/tuf"]
