[package]
name = "sigstore-verify"
description = "Sigstore signature verification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sigstore-types = { workspace = true }
sigstore-crypto = { workspace = true }
sigstore-merkle = { workspace = true }
sigstore-trust-root = { workspace = true }
sigstore-bundle = { workspace = true }
sigstore-rekor = { workspace = true }
sigstore-tsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
x509-cert = { workspace = true }
hex = { workspace = true }
cms = { workspace = true }
const-oid = { workspace = true }
tls_codec = { workspace = true }
pem = { workspace = true }
rustls-webpki = { workspace = true }
rustls-pki-types = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
const-oid = { workspace = true }
x509-cert = { workspace = true }
sigstore-types = { workspace = true }
regex = { workspace = true }

[features]
default = []
tuf = ["sigstore-trust-root/tuf"]
