[package]
name = "sigstore"
description = "High-level Sigstore signing and verification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sigstore-types = { path = "../sigstore-types" }
sigstore-crypto = { path = "../sigstore-crypto" }
sigstore-merkle = { path = "../sigstore-merkle" }
sigstore-tsa = { path = "../sigstore-tsa" }
sigstore-trust-root = { path = "../sigstore-trust-root" }
sigstore-bundle = { path = "../sigstore-bundle" }
sigstore-rekor = { path = "../sigstore-rekor" }
sigstore-fulcio = { path = "../sigstore-fulcio" }
sigstore-oidc = { path = "../sigstore-oidc" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = "0.2"
thiserror = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
x509-cert = { workspace = true }
hex = { workspace = true }
cms = { version = "0.2", default-features = false }
const-oid = { workspace = true }
rustls-webpki = { version = "0.103", default-features = false, features = ["alloc", "std"] }
rustls-pki-types = { version = "1.0", default-features = false }

[dev-dependencies]
tokio = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }

[features]
default = ["rustls-tls"]
rustls-tls = []
